--- a/docker-2/docker-compose/docker-compose.yml
+++ b/docker-2/docker-compose/docker-compose.yml
@@ -1,29 +1,21 @@
 version: '3.8'
-
 services:
   web:
     build: ./web
     ports:
-      - "8000:5000"
+      - "5000:5000"
     environment:
-      FLASK_ENV: development
-      DATABASE_URL: postgres://postgres:postgres@db/postgres
+      DATABASE_URL: postgresql://postgres:postgres@db/postgres
     depends_on:
       - db
       - redis
-    volumes:
-      - ./web:/code
-    command: flask run --host=0.0.0.0
-
   redis:
     image: redis:alpine
-    ports:
-      - "6379"
-
   db:
     image: postgres:alpine
     environment:
       POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
